--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
     <!-- <title>Little Lemon</title> -->
   </head>
   <body>
+    <!-- <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script> -->
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
