--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa."
-    />
+    <meta name="description" content="Litlle Lemon Restaurant Website." />
+    <meta name="title" content="Litlle Lemon" />
     <!-- <link
       rel="apple-touch-icon"
       href="https://icons8.com/icon/i5sUz0L2thV0/diet"
